Refactor bazi calculation to use AI instead of local computation
- Remove local bazi calculation algorithm
- Send raw birth information directly to OpenAI for accurate calculation
- Update HTML to display AI-calculated bazi results
- Ensure consistent and professional bazi analysis using AI expertise

--- a/index.html
+++ b/index.html
@@ -171,35 +171,8 @@
                     <!-- 四柱排盘 -->
                     <div class="bazi-pillars-section">
                         <h4>四柱排盘</h4>
-                        <div class="bazi-pillars">
-                            <div class="pillar">
-                                <div class="pillar-title">年柱</div>
-                                <div class="pillar-content">
-                                    <div class="gan" id="yearGan"></div>
-                                    <div class="zhi" id="yearZhi"></div>
-                                </div>
-                            </div>
-                            <div class="pillar">
-                                <div class="pillar-title">月柱</div>
-                                <div class="pillar-content">
-                                    <div class="gan" id="monthGan"></div>
-                                    <div class="zhi" id="monthZhi"></div>
-                                </div>
-                            </div>
-                            <div class="pillar">
-                                <div class="pillar-title">日柱</div>
-                                <div class="pillar-content">
-                                    <div class="gan" id="dayGan"></div>
-                                    <div class="zhi" id="dayZhi"></div>
-                                </div>
-                            </div>
-                            <div class="pillar">
-                                <div class="pillar-title">时柱</div>
-                                <div class="pillar-content">
-                                    <div class="gan" id="hourGan"></div>
-                                    <div class="zhi" id="hourZhi"></div>
-                                </div>
-                            </div>
+                        <div id="baziPillars" class="ai-result">
+                            <div class="loading">正在计算八字排盘...</div>
                         </div>
                     </div>
 
