Consolidate bazi analysis into single comprehensive output
- Replace multiple segmented AI requests with one complete analysis
- Remove duplicate content generation by consolidating all sections
- Add current year calculation and age-based analysis
- Include structured format: pillars, five elements, personality, career, marriage, health, and current destiny
- Add premium section for future 10-year destiny analysis
- Create payment UI with pricing and feature list
- Style premium section with gradients and hover effects
- Display payment section after AI analysis completes
- Maintain fixed content structure while improving user experience

--- a/index.html
+++ b/index.html
@@ -168,61 +168,40 @@
                         </div>
                     </div>
 
-                    <!-- 四柱排盘 -->
-                    <div class="bazi-pillars-section">
-                        <h4>四柱排盘</h4>
+                    <!-- 完整八字分析 -->
+                    <div class="complete-bazi-analysis">
                         <div id="baziPillars" class="ai-result">
                             <div class="loading">正在计算八字排盘...</div>
                         </div>
                     </div>
 
-                    <!-- 五行分析 -->
-                    <div class="wuxing-analysis">
-                        <h4>五行分析</h4>
-                        <div id="wuxingChart" class="wuxing-chart"></div>
-                        <div id="wuxingContent" class="analysis-content"></div>
-                    </div>
-
-                    <!-- 十神分析 -->
-                    <div class="shishen-analysis">
-                        <h4>十神分析</h4>
-                        <div id="shishenContent" class="analysis-content"></div>
-                    </div>
-
-                    <!-- 性格特征 -->
-                    <div class="personality-analysis">
-                        <h4>性格特征</h4>
-                        <div id="personalityContent" class="analysis-content"></div>
-                    </div>
-
-                    <!-- 事业财运 -->
-                    <div class="career-analysis">
-                        <h4>事业财运</h4>
-                        <div id="careerContent" class="analysis-content"></div>
-                    </div>
-
-                    <!-- 感情婚姻 -->
-                    <div class="relationship-analysis">
-                        <h4>感情婚姻</h4>
-                        <div id="relationshipContent" class="analysis-content"></div>
-                    </div>
-
-                    <!-- 健康运势 -->
-                    <div class="health-analysis">
-                        <h4>健康运势</h4>
-                        <div id="healthContent" class="analysis-content"></div>
-                    </div>
-
-                    <!-- 大运流年 -->
-                    <div class="dayun-analysis">
-                        <h4>大运流年</h4>
-                        <div id="dayunContent" class="analysis-content"></div>
-                    </div>
-
-                    <!-- 综合建议 -->
-                    <div class="comprehensive-analysis">
-                        <h4>综合建议</h4>
-                        <div id="comprehensiveContent" class="analysis-content"></div>
+                    <!-- 付费继续阅读按钮 -->
+                    <div id="paymentSection" class="payment-section hidden">
+                        <div class="payment-divider">
+                            <div class="divider-line"></div>
+                            <div class="divider-text">解锁更多运势</div>
+                            <div class="divider-line"></div>
+                        </div>
+                        <div class="payment-content">
+                            <h4>🔮 未来十年大运流年详解</h4>
+                            <p class="payment-description">
+                                想了解下一个十年的运势变化吗？<br>
+                                解锁完整的大运流年分析，包括：
+                            </p>
+                            <ul class="premium-features">
+                                <li>✨ 未来10年详细大运分析</li>
+                                <li>📅 逐年流年运势预测</li>
+                                <li>💼 事业发展关键节点</li>
+                                <li>💕 感情婚姻重要时机</li>
+                                <li>💰 财运起伏变化趋势</li>
+                            </ul>
+                            <button id="unlockPremium" class="premium-btn">
+                                <span class="btn-icon">🔓</span>
+                                <span class="btn-text">解锁未来运势</span>
+                                <span class="btn-price">￥29.9</span>
+                            </button>
+                            <p class="payment-note">* 暂未开通，敬请期待</p>
+                        </div>
                     </div>
                 </div>
             </div>
